// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextFieldValidated [common] example testing should match snapshot(s) for basic 1`] = `
<Validation
  Error={
    Array [
      Object {
        "children": "Nope, not even close!",
      },
    ]
  }
  className="lucid-TextFieldValidated"
>
  <TextField
    debounceLevel={500}
    isDisabled={false}
    isMultiLine={false}
    lazyLevel={1000}
    onBlur={[Function]}
    onChange={[Function]}
    onChangeDebounced={[Function]}
    onKeyDown={[Function]}
    onSubmit={[Function]}
    rows={5}
    value=""
  />
</Validation>
`;

exports[`TextFieldValidated [common] example testing should match snapshot(s) for debounced 1`] = `
<Validation
  Error={
    Array [
      Object {
        "children": "Please enter \\"foo\\"",
      },
    ]
  }
  className="lucid-TextFieldValidated"
>
  <TextField
    debounceLevel={500}
    isDisabled={false}
    isMultiLine={false}
    lazyLevel={1000}
    onBlur={[Function]}
    onChange={[Function]}
    onChangeDebounced={[Function]}
    onKeyDown={[Function]}
    onSubmit={[Function]}
    rows={5}
    value=""
  />
</Validation>
`;
